--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ email: paulwjonathan@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Mechanical Engineering student at Georgia Tech
 baseurl: "" # the subpath of your site, e.g. /blog
+address: Atlanta, GA
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
